# RT-CETSA-Analysis

./: .env  .gitignore  1_unzip.py  2_extract.py  2_extract_plate.py  31_extract_intensity.py  3_extract_intensity.py  41_fit_data.py  4_fit_data.py  README.md  a190606_PlateSpot_TimeSeries_ForPublication220718.m  core.py  functions.R  lib.py  main_analysis.R  models.py  new_dashboard.py  plate_info.csv  pyproject.toml  requirements.txt  rtcetsa_dashboard.py  test_auc.csv  test_control.csv  test_exp_param_full.csv  test_merged_molten_final.csv  test_parameters.csv  test_r.R  test_r.csv  test_r_1.R  test_r_2.R  test_r_3.R  test_r_4.R  test_r_5.R  test_r_6.R  test_r_7.R  test_r_8.R  test_r_9.R  test_rss.csv  test_signif.csv  test_variability.csv
data/: cleaned_expt1.csv  cleaned_expt2.csv  cleaned_expt3.csv  cleaned_expt4.csv  full_df.csv  signif_df.csv
data/cleaned_expt1/Signal_resources/: ~$Signal_Results.xlsx
notebooks/: process_plate.ipynb  process_plate_example.csv  test_extract.ipynb  test_extract_2.ipynb  test_extract_intensities.ipynb  test_find_coordinates.ipynb  test_nicks_code.ipynb  test_plate_size.ipynb  test_rotate.ipynb
rt_cetsa_analysis/: Dockerfile  build-docker.sh  ict.yaml  pyproject.toml  run-plugin.sh
rt_cetsa_analysis/requirements/: Requirements_1.R  Requirements_3.R  Requirements_4.R  Requirements_5.R  Requirements_6.R
rt_cetsa_analysis/src/: __main__.py  functions.R  main.R  main_analysis.R  prepare_data.R  run_rscript.py
src/process_plate/: process_plate.py  rotate.py  scikitlearn_example_ellipsis.py  scikitlearn_example_lines.py  scikitlearn_example_ovals.py
