[tool.poetry]
name = "rt-cetsa-analysis"
version = "0.1.0"
description = ""
authors = ["agerardin <antoine.gerardin@gmail.com>"]
packages = [{include = "process_plate", from = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
polus_images_segmentation_rt_cetsa_plate_extraction = { git = "https://github.com/nishaq503/image-tools", branch = "feat/rt-cetsa", subdirectory = "segmentation/rt-cetsa-plate-extraction-tool" }
polus_images_features_rt_cetsa_intensity_extraction = { git = "https://github.com/nishaq503/image-tools", branch = "feat/rt-cetsa", subdirectory = "features/rt-cetsa-intensity-extraction-tool" }
polus_tabular_regression_rt_cetsa_moltprot = { git = "https://github.com/nishaq503/tabular-tools", branch = "feat/rt-cetsa-4", subdirectory = "regression/rt-cetsa-moltprot-tool" }
scikit-image = "0.22.0"
bfio = "^2.3.6"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"
scipy = "^1.13.0"
python-dotenv = "^1.0.1"
filepattern = "^2.0.6"
numpy = "^1.26.4"
solara = "^1.32.2"
pandas = "^2.2.2"
tifffile = "^2024.5.10"
markdown = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
